--- a/frontend/angular-ecommerce/src/app/componets/product-category-menu/product-category-menu.component.html
+++ b/frontend/angular-ecommerce/src/app/componets/product-category-menu/product-category-menu.component.html
@@ -2,7 +2,7 @@
   <nav class="navbar-sidebar">
     <ul class="list-unstyled navbar-list">
       <li *ngFor="let tempCategory of productCategories">
-        <a routerLink="/category/{{tempCategory.id}}" routerLinkActive="active-link">
+        <a routerLink="/category/{{tempCategory.id}}/{{ tempCategory.category_name }}" routerLinkActive="active-link">
           {{tempCategory.category_name}}
         </a>
       </li>
