Add Search feature - Search input clear
After search click/enter input field cleared

--- a/frontend/angular-ecommerce/src/app/componets/search/search.component.html
+++ b/frontend/angular-ecommerce/src/app/componets/search/search.component.html
@@ -4,9 +4,9 @@
     #mySearchInput
     placeholder="Search for products ..."
     class="au-input au-input-xl"
-    (keyup.enter)="doSearch(mySearchInput.value)"/>
+    (keyup.enter)="doSearch()"/>
   <button
-    (click)="doSearch(mySearchInput.value)"
+    (click)="doSearch()"
     class="au-btn-submit">
     Search
   </button>
