Add Cart feature - Frontend part
Product's Cart feature the front end part: Cart component with html, model, service and update ProductList / ProductDetails Components listeners to call the Cart service.
Also housekeeping of ProductList Component.

--- a/frontend/angular-ecommerce/src/app/componets/product-details/product-details.component.html
+++ b/frontend/angular-ecommerce/src/app/componets/product-details/product-details.component.html
@@ -5,7 +5,8 @@
 
     <h3>{{ product.name }}</h3>
     <div class="price">{{ product.unit_price | currency: 'EUR' }}</div>
-    <a href="#" class="primary-btn" >Add to cart</a>
+    <button (click)="onAddToCart()" class="btn btn-primary btn-sm" >Add to cart</button>
+
 
     <hr>
     <h3>Description</h3>
